--- a/public/17_forms/src/pages/index.astro
+++ b/public/17_forms/src/pages/index.astro
@@ -1,3 +1,7 @@
+---
+
+---
+
 <!DOCTYPE html>
 <html>
 
@@ -7,7 +11,7 @@
 </head>
 
 <body>
-    <script src="out/app.js"></script>
+    <script src="../scripts/app.ts"></script>
     <form id="myForm">
         <label for="name">Name:</label>
         <input type="text" id="name" />
