--- a/public/18_webcomponents/src/pages/index.astro
+++ b/public/18_webcomponents/src/pages/index.astro
@@ -1,14 +1,17 @@
+---
+import '../styles/app.css';
+---
+
 <!DOCTYPE html>
 <html>
 
 <head>
     <title>webdev101 remi sharrock</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="app.css">
 </head>
 
 <body>
-    <script src="out/app.js"></script>
+    <script src="../scripts/app.ts"></script>
     <br>
     <hello-world></hello-world>
     <br>
